<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="428dp"
            android:layout_gravity="start"
            android:layout_marginStart="27dp"
            android:layout_marginTop="27dp"
            android:src="@drawable/ic_back"
            app:fabSize="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#8E8E8E" />

        <ImageView
            android:id="@+id/login_background"
            android:layout_width="643dp"
            android:layout_height="713dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-215dp"
            android:layout_marginTop="268dp"
            android:background="@drawable/ic_login_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_back"
            android:layout_width="250dp"
            android:layout_height="61dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="126dp"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center_vertical"
            android:lineHeight="39sp"
            android:text="@string/welcome_back_text"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/enter_user_name_password_text"
            android:layout_width="338dp"
            android:layout_height="61dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="163dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:lineHeight="39sp"
            android:text="@string/enter_your_user_name_pass_text"
            android:textColor="#565656"
            android:textFontWeight="600"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_text"
            style="@style/login_signup_texts"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_marginTop="167dp"
            android:gravity="center_vertical"
            android:text="@string/login_username_text"
            app:layout_constraintBottom_toTopOf="@+id/username_text_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_user_name_password_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text_input"
            android:layout_width="349dp"
            android:layout_height="47dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/password_text"
            style="@style/login_signup_texts"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_marginTop="67dp"
            android:gravity="center_vertical"
            android:text="@string/login_password_text"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text_input" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_input"
            android:layout_width="349dp"
            android:layout_height="47dp"
            android:inputType="textPassword"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="229dp"
            android:layout_height="62dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/inder"
            android:lineHeight="45dp"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"
            android:textFontWeight="400"
            android:textSize="36sp"
            app:cornerRadius="30dp"
            app:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password_text_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/forgot_password"
            android:textColor="#6B6B6B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_text_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:fontFamily="@font/inter"
            android:text="@string/or_create_a_new_account"
            android:textColor="#6B6B6B"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>