<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/singup_background"
            android:layout_width="643dp"
            android:layout_height="713dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-90dp"
            android:layout_marginTop="85dp"
            android:shadowColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_signup_bg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/create_account_text"
            android:layout_width="209dp"
            android:layout_height="86dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center_vertical"
            android:lineHeight="38sp"
            android:text="@string/create_account_text"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="32sp"
            app:cornerRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username_text"
            style="@style/login_signup_texts"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="83dp"
            android:gravity="center_vertical"
            android:text="@string/enter_email_id_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_email_text_input"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/create_username_text"
            style="@style/login_signup_texts"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="57dp"
            android:gravity="center_vertical"
            android:text="@string/create_username_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_email_text_input" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_username_text_input"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:inputType="text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_username_text" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/create_password_text"
            style="@style/login_signup_texts"
            android:layout_width="333dp"
            android:layout_height="31dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="57dp"
            android:gravity="center_vertical"
            android:text="Create Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_username_text_input" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_password_text_input"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_password_text" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/inder"
            android:text="Sign Up"
            android:textColor="#FFFFFF"
            android:textFontWeight="400"
            android:textSize="36sp"
            app:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_password_text_input" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="27dp"
            android:layout_marginTop="27dp"
            android:src="@drawable/ic_back"
            app:fabSize="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#8E8E8E" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>